--- a/MySportsDiary/Base.lproj/Main.storyboard
+++ b/MySportsDiary/Base.lproj/Main.storyboard
@@ -180,7 +180,7 @@
         <!--Questions View Controller-->
         <scene sceneID="SlR-ny-ZVV">
             <objects>
-                <viewController storyboardIdentifier="QuestionsPartB" id="7kt-Vz-nvq" customClass="QuestionsViewController" customModule="MySportsDiary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="QuestionsPartB" useStoryboardIdentifierAsRestorationIdentifier="YES" id="7kt-Vz-nvq" customClass="QuestionsViewController" customModule="MySportsDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EEy-ES-auY"/>
                         <viewControllerLayoutGuide type="bottom" id="CwF-f5-nlh"/>
@@ -196,7 +196,7 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="ded-VF-84n" kind="show" id="NHG-mP-QK0"/>
+                                    <segue destination="ded-VF-84n" kind="show" identifier="toPageThree" id="NHG-mP-QK0"/>
                                 </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="5Hp-mx-Znt">
@@ -247,6 +247,12 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 of 3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uFB-2h-7mZ">
+                                <rect key="frame" x="277" y="484" width="45" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -260,6 +266,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="ONQ-XM-CeZ" secondAttribute="trailing" constant="8" id="CcL-Ju-GWQ"/>
                             <constraint firstItem="Ymk-dS-aVT" firstAttribute="leading" secondItem="iaB-j2-70w" secondAttribute="leadingMargin" id="DRq-iJ-YUz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Len-7w-aqc" secondAttribute="trailing" id="FQ7-np-gBo"/>
+                            <constraint firstItem="0h6-XI-Xtb" firstAttribute="top" secondItem="uFB-2h-7mZ" secondAttribute="bottom" constant="8" id="Hhl-mX-WWh"/>
                             <constraint firstItem="rOz-9I-TeS" firstAttribute="top" secondItem="Len-7w-aqc" secondAttribute="bottom" constant="8" id="HtG-6D-V6e"/>
                             <constraint firstAttribute="trailingMargin" secondItem="0h6-XI-Xtb" secondAttribute="trailing" constant="8" id="I46-Bt-XdS"/>
                             <constraint firstItem="Len-7w-aqc" firstAttribute="centerX" secondItem="iaB-j2-70w" secondAttribute="centerX" id="MOy-BP-EsI"/>
@@ -269,6 +276,7 @@
                             <constraint firstItem="Len-7w-aqc" firstAttribute="top" secondItem="5Hp-mx-Znt" secondAttribute="bottom" constant="31" id="VxU-f6-wAx"/>
                             <constraint firstItem="5Hp-mx-Znt" firstAttribute="leading" secondItem="iaB-j2-70w" secondAttribute="leadingMargin" constant="8" id="ZvB-ft-tbu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="rOz-9I-TeS" secondAttribute="trailing" constant="8" id="fh3-tT-Kpa"/>
+                            <constraint firstItem="uFB-2h-7mZ" firstAttribute="centerX" secondItem="iaB-j2-70w" secondAttribute="centerX" id="g6z-mi-Ofj"/>
                             <constraint firstItem="rOz-9I-TeS" firstAttribute="leading" secondItem="iaB-j2-70w" secondAttribute="leadingMargin" constant="8" id="hVm-c5-1CE"/>
                             <constraint firstItem="Len-7w-aqc" firstAttribute="leading" secondItem="iaB-j2-70w" secondAttribute="leadingMargin" id="jSp-QL-sJx"/>
                             <constraint firstItem="Ymk-dS-aVT" firstAttribute="centerX" secondItem="iaB-j2-70w" secondAttribute="centerX" id="m4l-3e-X0D"/>
@@ -276,6 +284,11 @@
                             <constraint firstAttribute="trailingMargin" secondItem="5Hp-mx-Znt" secondAttribute="trailing" constant="8" id="v5l-Sc-hzQ"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outletCollection property="lickertSegmentedControls" destination="5Hp-mx-Znt" collectionClass="NSMutableArray" id="w0I-7E-guI"/>
+                        <outletCollection property="lickertSegmentedControls" destination="rOz-9I-TeS" collectionClass="NSMutableArray" id="Nhw-pB-TqZ"/>
+                        <outletCollection property="lickertSegmentedControls" destination="ONQ-XM-CeZ" collectionClass="NSMutableArray" id="HPN-y1-Lcv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v46-jf-nPq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -300,7 +313,7 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="pbZ-6v-qqf" kind="show" id="zFt-bB-jtg"/>
+                                    <segue destination="pbZ-6v-qqf" kind="show" identifier="toPageOne" id="zFt-bB-jtg"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BAa-cl-7ax">
@@ -315,7 +328,8 @@
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="65" translatesAutoresizingMaskIntoConstraints="NO" id="8Vk-qR-bpS">
                                 <rect key="frame" x="66" y="114" width="508" height="31"/>
                                 <connections>
-                                    <action selector="onAgeSliderMoved:" destination="KBN-8C-xNN" eventType="valueChanged" id="d6i-0a-V5I"/>
+                                    <action selector="onAgeSliderMoved:" destination="KBN-8C-xNN" eventType="valueChanged" id="By1-Gv-UAH"/>
+                                    <action selector="onAgeSliderValueChanged:" destination="KBN-8C-xNN" eventType="touchUpInside" id="koe-xU-j3L"/>
                                 </connections>
                             </slider>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="Mer-OE-1HC">
@@ -358,7 +372,7 @@
         <!--Questions View Controller-->
         <scene sceneID="u7F-RL-OaB">
             <objects>
-                <viewController storyboardIdentifier="QuestionsPartA" id="pbZ-6v-qqf" customClass="QuestionsViewController" customModule="MySportsDiary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="QuestionsPartA" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pbZ-6v-qqf" customClass="QuestionsViewController" customModule="MySportsDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="w7K-eN-w2N"/>
                         <viewControllerLayoutGuide type="bottom" id="b30-bO-0re"/>
@@ -374,7 +388,7 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="7kt-Vz-nvq" kind="show" id="D3J-KG-8lp"/>
+                                    <segue destination="7kt-Vz-nvq" kind="show" identifier="toPageTwo" id="D3J-KG-8lp"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I do well at any sports I play" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gtp-vC-73r">
@@ -425,6 +439,12 @@
                                     <segment title="" image="Cool-50"/>
                                 </segments>
                             </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 of 3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AEq-4L-DRe">
+                                <rect key="frame" x="278" y="484" width="43" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -433,6 +453,7 @@
                             <constraint firstItem="9uc-DB-nY0" firstAttribute="leading" secondItem="CFz-Ps-dlT" secondAttribute="leadingMargin" id="5Dm-92-8r6"/>
                             <constraint firstItem="K86-bc-vPG" firstAttribute="leading" secondItem="CFz-Ps-dlT" secondAttribute="leadingMargin" constant="8" id="AFv-A8-x9O"/>
                             <constraint firstItem="II1-0a-9Up" firstAttribute="leading" secondItem="CFz-Ps-dlT" secondAttribute="leadingMargin" constant="8" id="C0b-OC-qPm"/>
+                            <constraint firstItem="AEq-4L-DRe" firstAttribute="centerX" secondItem="CFz-Ps-dlT" secondAttribute="centerX" id="OLX-ax-bvd"/>
                             <constraint firstItem="Gtp-vC-73r" firstAttribute="top" secondItem="w7K-eN-w2N" secondAttribute="bottom" constant="8" id="R20-tO-cCr"/>
                             <constraint firstItem="Gtp-vC-73r" firstAttribute="centerX" secondItem="CFz-Ps-dlT" secondAttribute="centerX" id="Weo-Xt-Iwa"/>
                             <constraint firstItem="Ywx-Jk-MmP" firstAttribute="top" secondItem="9uc-DB-nY0" secondAttribute="bottom" constant="8" id="Xd3-Ll-f9k"/>
@@ -442,6 +463,7 @@
                             <constraint firstItem="cYI-2o-Mgh" firstAttribute="leading" secondItem="CFz-Ps-dlT" secondAttribute="leadingMargin" constant="8" id="fDy-3B-ci4"/>
                             <constraint firstItem="Gtp-vC-73r" firstAttribute="leading" secondItem="CFz-Ps-dlT" secondAttribute="leadingMargin" id="mfX-nO-tFO"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8Yt-Rg-Zjf" secondAttribute="trailing" id="nCE-An-fe5"/>
+                            <constraint firstItem="II1-0a-9Up" firstAttribute="top" secondItem="AEq-4L-DRe" secondAttribute="bottom" constant="8" id="sgP-R5-KvH"/>
                             <constraint firstItem="Ywx-Jk-MmP" firstAttribute="leading" secondItem="CFz-Ps-dlT" secondAttribute="leadingMargin" constant="8" id="snd-CY-lrv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="9uc-DB-nY0" secondAttribute="trailing" id="tCe-kC-eEa"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Gtp-vC-73r" secondAttribute="trailing" id="uGB-mR-7vE"/>
@@ -454,6 +476,14 @@
                             <constraint firstItem="8Yt-Rg-Zjf" firstAttribute="centerX" secondItem="CFz-Ps-dlT" secondAttribute="centerX" id="yMV-wy-5Ud"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outletCollection property="questions" destination="cYI-2o-Mgh" collectionClass="NSMutableArray" id="W68-3w-mHx"/>
+                        <outletCollection property="questions" destination="Ywx-Jk-MmP" collectionClass="NSMutableArray" id="Dlr-Zm-ptt"/>
+                        <outletCollection property="questions" destination="K86-bc-vPG" collectionClass="NSMutableArray" id="D3b-61-HJP"/>
+                        <outletCollection property="lickertSegmentedControls" destination="cYI-2o-Mgh" collectionClass="NSMutableArray" id="lXH-gQ-Lg5"/>
+                        <outletCollection property="lickertSegmentedControls" destination="Ywx-Jk-MmP" collectionClass="NSMutableArray" id="GDw-Jd-hpt"/>
+                        <outletCollection property="lickertSegmentedControls" destination="K86-bc-vPG" collectionClass="NSMutableArray" id="mpb-Hd-ieu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wEi-FR-lqE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -462,7 +492,7 @@
         <!--Questions View Controller-->
         <scene sceneID="eKP-j6-cYf">
             <objects>
-                <viewController storyboardIdentifier="QuestionsPartC" id="ded-VF-84n" customClass="QuestionsViewController" customModule="MySportsDiary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="QuestionsPartC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ded-VF-84n" customClass="QuestionsViewController" customModule="MySportsDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9Xd-Gb-l7q"/>
                         <viewControllerLayoutGuide type="bottom" id="MUE-hu-jvO"/>
@@ -529,6 +559,12 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 of 3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aox-dq-ame">
+                                <rect key="frame" x="277" y="484" width="45" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -540,9 +576,11 @@
                             <constraint firstAttribute="trailingMargin" secondItem="w3C-o8-Wjs" secondAttribute="trailing" constant="8" id="AYf-vY-NpY"/>
                             <constraint firstItem="xn3-p5-TMi" firstAttribute="top" secondItem="w3C-o8-Wjs" secondAttribute="bottom" constant="32" id="F9g-pt-OpE"/>
                             <constraint firstAttribute="trailingMargin" secondItem="tJ3-Iu-fl1" secondAttribute="trailing" id="Fha-ea-cNv"/>
+                            <constraint firstItem="Uah-A9-tQG" firstAttribute="top" secondItem="Aox-dq-ame" secondAttribute="bottom" constant="8" id="Jre-mh-yF0"/>
                             <constraint firstItem="AEp-hI-es9" firstAttribute="top" secondItem="xn3-p5-TMi" secondAttribute="bottom" constant="8" id="M6d-LW-nk6"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xn3-p5-TMi" secondAttribute="trailing" id="NMS-XX-eU4"/>
                             <constraint firstItem="AEp-hI-es9" firstAttribute="leading" secondItem="WG5-Xm-hr8" secondAttribute="leadingMargin" constant="8" id="Psu-Vv-J22"/>
+                            <constraint firstItem="Aox-dq-ame" firstAttribute="centerX" secondItem="WG5-Xm-hr8" secondAttribute="centerX" id="R1d-Zm-8s3"/>
                             <constraint firstAttribute="trailingMargin" secondItem="AEp-hI-es9" secondAttribute="trailing" constant="8" id="SKN-ik-5my"/>
                             <constraint firstItem="tJ3-Iu-fl1" firstAttribute="leading" secondItem="WG5-Xm-hr8" secondAttribute="leadingMargin" id="XRl-Vk-fag"/>
                             <constraint firstAttribute="trailingMargin" secondItem="EZG-9a-Gvv" secondAttribute="trailing" constant="8" id="Yz7-UX-5qg"/>
@@ -564,6 +602,11 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outletCollection property="lickertSegmentedControls" destination="EZG-9a-Gvv" collectionClass="NSMutableArray" id="7B8-FC-Vcb"/>
+                        <outletCollection property="lickertSegmentedControls" destination="w3C-o8-Wjs" collectionClass="NSMutableArray" id="Obs-Kp-2qW"/>
+                        <outletCollection property="lickertSegmentedControls" destination="AEp-hI-es9" collectionClass="NSMutableArray" id="8QF-IF-Xni"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rvi-ct-Vpk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
